--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Ketan Mittal: Personal Site and Portfolio (DSC 106)</title>
 </head>
 <body>
-    
+    <h1> Ketan Mittal</h1>
+    <p> This is a quick description. This is specifically for the Spring 2025 DSC 106 Class where we will be learning Data Science Visualization. A quick introduction about me is that I am a current sophomore student at UCSD, studying Data Science and double minoring in Mathematics and Cognitive Science. </p>
 </body>
 </html>
