--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ketan Mittal: Personal Site and Portfolio (DSC 106)</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1> Ketan Mittal</h1>
     <p> This is a quick description. This is specifically for the Spring 2025 DSC 106 Class where we will be learning Data Science Visualization. A quick introduction about me is that I am a current sophomore student at UCSD, studying Data Science and double minoring in Mathematics and Cognitive Science. </p>
     <img src = "images/rice.jpg" alt = "sticky rice">
+    <nav>
+        <a href="/index.html">Home</a>
+        <a href="/projects/index.html">Projects</a>
+        <a href="/contact/index.html">Contact</a>
+        <a href="https://github.com/k1mittal" target="_blank">GitHub</a>
+    </nav>
 </body>
 </html>
