--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <p> This is a quick description. This is specifically for the Spring 2025 DSC 106 Class where we will be learning Data Science Visualization. A quick introduction about me is that I am a current sophomore student at UCSD, studying Data Science and double minoring in Mathematics and Cognitive Science. </p>
     <img src = "images/rice.jpg" alt = "sticky rice">
     <nav>
-        <a href="/index.html">Home</a>
-        <a href="/projects/index.html">Projects</a>
-        <a href="/contact/index.html">Contact</a>
+        <a href="./index.html">Home</a>
+        <a href="./projects/index.html">Projects</a>
+        <a href="./contact/index.html">Contact</a>
         <a href="https://github.com/k1mittal" target="_blank">GitHub</a>
     </nav>
 </body>
-</html>
+</html> 
