--- a/contact/index.html
+++ b/contact/index.html
@@ -7,5 +7,29 @@
 </head>
 <body>
     <h1>Contact Page</h1>
+    <form action="mailto:k1mittal@ucsd.edu" method="POST" enctype="text/plain">
+        <label>
+            Your Email:
+            <input type="email" name="email" required>
+        </label>
+        <br>
+        <label>
+            Subject:
+            <input name="subject" required>
+        </label>
+        <br>
+        <label>
+            Message:
+            <textarea name="body" rows="5" cols="30" required></textarea>
+        </label>
+        <br>
+        <button>Send</button>
+    </form>
+    <nav>
+        <a href="./index.html">Home</a>
+        <a href="./projects/index.html">Projects</a>
+        <a href="./contact/index.html">Contact</a>
+        <a href="https://github.com/k1mittal" target="_blank">GitHub</a>
+    </nav>
 </body>
 </html>
