--- a/projects/index.html
+++ b/projects/index.html
@@ -7,5 +7,11 @@
 </head>
 <body>
     <h1>Projects Page</h1>
+    <nav>
+        <a href="./index.html">Home</a>
+        <a href="./projects/index.html">Projects</a>
+        <a href="./contact/index.html">Contact</a>
+        <a href="https://github.com/k1mittal" target="_blank">GitHub</a>
+    </nav>
 </body>
 </html>
