--- a/contact/index.html
+++ b/contact/index.html
@@ -26,9 +26,9 @@
         <button>Send</button>
     </form>
     <nav>
-        <a href="./index.html">Home</a>
-        <a href="./projects/index.html">Projects</a>
-        <a href="./contact/index.html">Contact</a>
+        <a href="../index.html">Home</a>
+        <a href="../projects/index.html">Projects</a>
+        <a href="../contact/index.html">Contact</a>
         <a href="https://github.com/k1mittal" target="_blank">GitHub</a>
     </nav>
 </body>
