--- a/contact/index.html
+++ b/contact/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Contact Page</h1>
-    <form action="mailto:k1mittal@ucsd.edu" method="POST" enctype="text/plain">
+    <form action="mailto:k1mittal@ucsd.edu" method="get" enctype="text/plain">
         <label>
             Your Email:
             <input type="email" name="email" required>
@@ -26,6 +26,7 @@
         <a href="../index.html">Home</a>
         <a href="../projects/index.html">Projects</a>
         <a href="../contact/index.html">Contact</a>
+        <a href="../resume/index.html">Resume</a>
         <a href="https://github.com/k1mittal" target="_blank">GitHub</a>
     </nav>
 </body>
