--- a/projects/index.html
+++ b/projects/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects Page</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <h1>Projects Page</h1>
     <nav>
         <a href="../index.html">Home</a>
         <a href="../projects/index.html">Projects</a>
@@ -14,5 +14,6 @@
         <a href="../resume/index.html">Resume</a>
         <a href="https://github.com/k1mittal" target="_blank">GitHub</a>
     </nav>
+    <h1>Projects Page</h1>
 </body>
 </html>
