--- a/resume/index.html
+++ b/resume/index.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resume Page</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
+    <nav>
+      <a href="../index.html">Home</a>
+      <a href="../projects/index.html">Projects</a>
+      <a href="../contact/index.html">Contact</a>
+      <a href="../resume/index.html">Resume</a>
+      <a href="https://github.com/k1mittal" target="_blank">GitHub</a>
+    </nav>
     <h1>Resume Page</h1>
     <header>
       <h1>Ketan Mittal</h1>
@@ -54,12 +62,6 @@
         <li>Tools: Git, Pandas, Docker, Postman, MongoDB, PyTorch, TensorFlow, Scikit-learn, FastAPI, Express, Postgres, Numpy, Matplotlib, JFrog, Beautiful Soup, OpenCV, Langfuse, LiteLLM, Firebase, SCRUM, Microsoft Power Apps, Splunk</li>
       </ul>
     </section>
-    <nav>
-        <a href="../index.html">Home</a>
-        <a href="../projects/index.html">Projects</a>
-        <a href="../contact/index.html">Contact</a>
-        <a href="../resume/index.html">Resume</a>
-        <a href="https://github.com/k1mittal" target="_blank">GitHub</a>
-    </nav>
+
 </body>
 </html>
