--- a/contact/index.html
+++ b/contact/index.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Page</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
+    <nav>
+        <a href="../index.html">Home</a>
+        <a href="../projects/index.html">Projects</a>
+        <a href="../contact/index.html">Contact</a>
+        <a href="../resume/index.html">Resume</a>
+        <a href="https://github.com/k1mittal" target="_blank">GitHub</a>
+    </nav>
     <h1>Contact Page</h1>
     <form action="mailto:k1mittal@ucsd.edu" method="get" enctype="text/plain">
         <label>
@@ -22,12 +30,5 @@
         </label>
         <button>Send</button>
     </form>
-    <nav>
-        <a href="../index.html">Home</a>
-        <a href="../projects/index.html">Projects</a>
-        <a href="../contact/index.html">Contact</a>
-        <a href="../resume/index.html">Resume</a>
-        <a href="https://github.com/k1mittal" target="_blank">GitHub</a>
-    </nav>
 </body>
 </html>
