--- a/contact/index.html
+++ b/contact/index.html
@@ -10,22 +10,22 @@
     <nav>
         <a href="../index.html">Home</a>
         <a href="../projects/index.html">Projects</a>
-        <a href="../contact/index.html">Contact</a>
+        <a class = "current" href="../contact/index.html">Contact</a>
         <a href="../resume/index.html">Resume</a>
         <a href="https://github.com/k1mittal" target="_blank">GitHub</a>
     </nav>
     <h1>Contact Page</h1>
     <form action="mailto:k1mittal@ucsd.edu" method="get" enctype="text/plain">
         <label>
-            Your Email:
+            Email: 
             <input type="email" name="email" required>
         </label>
         <label>
-            Subject:
+            Subject: 
             <input name="subject" required>
         </label>    
         <label>
-            Message:
+            Message: 
             <textarea name="body" rows="5" cols="30" required></textarea>
         </label>
         <button>Send</button>
