--- a/resume/index.html
+++ b/resume/index.html
@@ -19,7 +19,7 @@
         <h1 class="resume-name">Ketan Mittal</h1>
         <p class="resume-contact">
           +1 (925)-997-3105 |
-          <a href="mailto:mittal.ketan1@gmail.com">mittal.ketan1@gmail.com</a> |
+          <a href="mailto:k1mittal@ucsd.edu">k1mittal@ucsd.edu</a> |
           <a href="https://www.linkedin.com">LinkedIn</a> |
           <a href="https://github.com/k1mittal">GitHub</a>
         </p>
