--- a/resume/index.html
+++ b/resume/index.html
@@ -61,26 +61,27 @@
             </p>
             <ul class="resume-bullets">
               <li>
-                Implemented GPT-4o in internal chatbot, reducing costs 10x and
-                improving accuracy by 4%.
+                Implemented GPT-4o in an internal customer service FAQ chatbot, resulting in a 10x reduction in cost per LLM call, 52% faster call resolution times, and a 4% improvement in accuracy
               </li>
-              <li>Deployed a caching API to cut startup time by 3 seconds.</li>
-              <li>
-                Created RESTful APIs to ingest 20,000+ documents into MongoDB.
+              <li>Deployed a caching API to automatically retrieve customer information, reducing chatbot startup time by 3 seconds
               </li>
               <li>
-                Integrated LLM performance reporting into Azure Data Lake.
+                Created various CRUD RESTful APIs for ingesting over 20000 document chunks into MongoDB
               </li>
-              <li>Built secure React UI for accessing PHI data.</li>
               <li>
-                Updated docs, libraries, and data fields based on team needs.
+                Reported company-wide LLM metrics to Azure Data Lake Storage by integrating a custom callback service, enabling actionable insights into LLM performance and cost efficiency
+              </li>
+              <li>Designed, developed, and deployed a front-end UI using React and JavaScript, providing a secure method for internal engineers to interact with sensitive customer information (PHI)
+              </li>
+              <li>
+                Contributed to creating a documentation website, revising vulnerable and outdated libraries, and revising data fields according to the extended team’s needs
               </li>
             </ul>
           </article>
 
           <article class="resume-entry">
             <div class="resume-entry-div">
-              <h3 class="resume-entry-title">DS3 – Role</h3>
+              <h3 class="resume-entry-title">DS3 – Assistant Project Director</h3>
               <em> June 2024 – Present</em>
             </div>
             <p class="resume-entry-dates">
@@ -88,13 +89,13 @@
             </p>
             <ul class="resume-bullets">
               <li>
-                Led 12+ AI projects, managing 60+ members and ML development.
+                Directed the development of over 12 AI-based research projects, overseeing task assignment and progress of over 60 members, providing guidance in implementing ML models, fine-tuning hyperparameters, and optimizing model architectures
               </li>
               <li>
-                Planned presentations, events, and workshops to share results.
+                Organized and coordinated end-of-year presentations, events, workshops, and regular meetings to foster skill development and showcase achievements through live demonstrations to peers, professors, and distinguished guests 
               </li>
               <li>
-                Trained segmentation models with PyTorch & VGG-16 (97% IoU).
+                Utilized the CARLA self-driving car simulator dataset (5000 images) to develop and train semantic segmentation (object detection) models leveraging PyTorch, a VGG-16 model, UNet Model, and CNN techniques for self-driving cars while achieving an intersection-over-union accuracy of 97%
               </li>
             </ul>
           </article>
@@ -108,9 +109,10 @@
               <em>La Jolla, CA </em>
             </p>
             <ul class="resume-bullets">
-              <li>Developed e-bike safety site using MERN stack.</li>
-              <li>Enhanced state management and integrated Firebase auth.</li>
-              <li>Built responsive, reusable components.</li>
+              <li>Collaborated with UCSD Health to develop an interactive, gamified e-bike safety certification website using the MERN stack (MongoDB, Express, React, Node.js) to educate e-bike riders on bike safety
+              </li>
+              <li>Optimized state management and API efficiency, implemented secure Firebase authentication for user data protection, and designed reusable dynamic components to enhance UI responsiveness and scalability
+              </li>
             </ul>
           </article>
 
@@ -124,10 +126,9 @@
             </p>
             <ul class="resume-bullets">
               <li>
-                Led office hours for DSC 40B (sorting, search trees,
-                Dijkstra’s).
+                Conducted in-depth office hours sessions for the DSC 40B (Theoretical Foundations of Data Science II) class, clarifying topics such as runtime analysis, topological sort, Dijkstra’s, Prim’s, and Kruskal’s, to enhance student understanding and performance
               </li>
-              <li>Supported 145+ students, graded and proctored exams.</li>
+              <li>Provided detailed responses to discussion board queries, graded assignments and exams, proctored tests, and developed test questions and rubrics, ensuring consistent support for a class of over 145 students</li>
             </ul>
           </article>
 
@@ -141,13 +142,13 @@
             </p>
             <ul class="resume-bullets">
               <li>
-                Used R and NACC data to explore Alzheimer’s and mental health.
+                Used the R programming language and data from the NACC (National Alzheimer’s Coordinating Center) to prove the association between mental health and Alzheimer's Disease
               </li>
               <li>
-                Achieved 84.6% diagnostic accuracy via logistic regression.
+                Predicted the diagnosis of early or late-stage Alzheimer’s with 84.6% accuracy using various tools like Multinomial Logistic Regression, Fisher’s Exact Test, and ggplot2
               </li>
               <li>
-                Presented findings via research poster to professors and peers.
+                Identified key mental health factors influencing Alzheimer’s onset, presenting a research poster to professors and peers
               </li>
             </ul>
           </article>
@@ -175,16 +176,14 @@
           <h2 class="resume-section-title">Skills</h2>
           <ul class="resume-bullets">
             <li>
-              <b>Languages:</b> Python, Java, R, SQL, TypeScript,
+              <u>Programming Languages:</u> Python, Java, R, SQL, TypeScript,
               HTML, CSS, React, Node.js, LaTeX
             </li>
             <li>
-              <b>Tools:</b> Git, Pandas, Docker, Postman, MongoDB,
-              PyTorch, TensorFlow, Scikit-learn
+              <u>Softwares:</u> Visual Studio Code, Jupyter Notebooks, Google Colab, Azure DevOps, Azure Kubernetes Service, Databricks
             </li>
             <li>
-              <b>Platforms:</b> VS Code, Azure, Colab, Jupyter,
-              Databricks, Firebase, Power Apps, Splunk
+              <u>Tools:</u>  Git, Pandas, Docker, Postman, MongoDB, PyTorch, TensorFlow, Scikit-learn, FastAPI, Express, Postgres, Numpy, Matplotlib, JFrog, Beautiful Soup, OpenCV, Langfuse, LiteLLM, Firebase, SCRUM, Microsoft Power Apps, Splunk
             </li>
           </ul>
         </section>
