--- a/contact/index.html
+++ b/contact/index.html
@@ -7,13 +7,7 @@
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <nav>
-        <a href="../index.html">Home</a>
-        <a href="../projects/index.html">Projects</a>
-        <a class = "current" href="../contact/index.html">Contact</a>
-        <a href="../resume/index.html">Resume</a>
-        <a href="https://github.com/k1mittal" target="_blank">GitHub</a>
-    </nav>
+    <script type="module" src="../global.js"></script>
     <h1>Contact Page</h1>
     <form action="mailto:k1mittal@ucsd.edu" method="get" enctype="text/plain">
         <label>
