--- a/resume/index.html
+++ b/resume/index.html
@@ -7,13 +7,7 @@
     <link rel="stylesheet" href="../styles.css" />
   </head>
   <body>
-    <nav>
-      <a href="../index.html">Home</a>
-      <a href="../projects/index.html">Projects</a>
-      <a href="../contact/index.html">Contact</a>
-      <a class="current" href="../resume/index.html">Resume</a>
-      <a href="https://github.com/k1mittal" target="_blank">GitHub</a>
-    </nav>
+    <script type="module" src="../global.js"></script>
     <div class="resume-container">
       <header class="resume-header">
         <h1 class="resume-name">Ketan Mittal</h1>
