--- a/index.html
+++ b/index.html
@@ -7,16 +7,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <nav>
-        <a class="current" href="./index.html">Home</a>
-        <a href="./projects/index.html">Projects</a>
-        <a href="./contact/index.html">Contact</a>
-        <a href="./resume/index.html">Resume</a>
-        <a href="https://github.com/k1mittal" target="_blank">GitHub</a>
-    </nav>
+    <script type="module" src="global.js"></script>
     <h1> Ketan Mittal</h1>
     <p> This is a quick description. This is specifically for the Spring 2025 DSC 106 Class where we will be learning Data Science Visualization. A quick introduction about me is that I am a current sophomore student at UCSD, studying Data Science and double minoring in Mathematics and Cognitive Science. </p>
     <img src = "images/rice.jpg" alt = "sticky rice" height="200px">
-
 </body>
 </html> 
