--- a/projects/index.html
+++ b/projects/index.html
@@ -7,13 +7,7 @@
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <nav>
-        <a href="../index.html">Home</a>
-        <a class = "current" href="../projects/index.html">Projects</a>
-        <a href="../contact/index.html">Contact</a>
-        <a href="../resume/index.html">Resume</a>
-        <a href="https://github.com/k1mittal" target="_blank">GitHub</a>
-    </nav>
+    <script type="module" src="../global.js"></script>
     <h1>Projects Page</h1>
     <div class="projects">
         <article>
