--- a/contact/index.html
+++ b/contact/index.html
@@ -9,11 +9,7 @@
 <body>
     <script type="module" src="../global.js"></script>
     <h1>Contact Page</h1>
-    <form action="mailto:k1mittal@ucsd.edu" method="get" enctype="text/plain">
-        <label>
-            Email: 
-            <input type="email" name="email" required>
-        </label>
+    <form action="mailto:k1mittal@ucsd.edu" method="GET">
         <label>
             Subject: 
             <input name="subject" required>
