--- a/projects/index.html
+++ b/projects/index.html
@@ -1,75 +1,170 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Projects Page</title>
-    <link rel="stylesheet" href="../styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="../styles.css" />
+  </head>
+  <body>
     <script type="module" src="../global.js"></script>
     <h1>Projects Page</h1>
     <div class="projects">
-        <article>
-            <h2>Lorem ipsum dolor sit.</h2>
-            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores excepturi numquam modi aperiam eius magnam! Eaque cupiditate debitis accusamus molestias quas harum cumque, perspiciatis totam vero assumenda ratione suscipit temporibus!</p>
-        </article>
-        <article>
-            <h2>Debitis voluptates ab inventore.</h2>
-            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-            <p>Deserunt, iste fuga? Voluptas assumenda fuga, ratione, magnam molestias quo neque cupiditate repellendus odit ex quisquam impedit error pariatur est atque sint dolore consequatur mollitia quos, sapiente amet? Similique, eligendi.</p>
-        </article>
-        <article>
-            <h2>Illum necessitatibus sint magni.</h2>
-            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-            <p>Inventore aut error beatae dicta, itaque ut repudiandae dignissimos deserunt incidunt perspiciatis earum repellat, maxime eum neque voluptatum velit sapiente ipsam aspernatur iste quia. Commodi minus tempore laborum impedit facere.</p>
-        </article>
-        <article>
-            <h2>Distinctio ea quo iusto?</h2>
-            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-            <p>Ipsam officiis saepe voluptatem qui, harum, unde culpa facilis eius doloribus debitis voluptatibus repudiandae error quis iste perferendis nam nulla nihil tenetur fugit ullam eaque. Debitis quos eveniet recusandae dignissimos?</p>
-        </article>
-        <article>
-            <h2>Mollitia illum rem error.</h2>
-            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-            <p>Laborum quisquam consectetur quaerat quos in ab, est perferendis vitae assumenda natus modi rem dolore a animi illum! Architecto tenetur eveniet eaque sit rem iste, ipsa voluptate unde beatae. Ipsa?</p>
-        </article>
-        <article>
-            <h2>Maiores reiciendis quasi totam?</h2>
-            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-            <p>Impedit illo recusandae sit debitis, laboriosam natus quas aliquid esse officiis harum amet maxime porro ea provident at error itaque excepturi dolorem. Recusandae unde delectus dolorum voluptas ullam quis iste.</p>
-        </article>
-        <article>
-            <h2>Maiores quos blanditiis alias.</h2>
-            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-            <p>Sequi recusandae magni ratione et, veniam distinctio nobis, vitae vel inventore vero libero accusantium, fugit quam quaerat cupiditate facere illo? At harum, magnam est ad vitae numquam possimus repellendus non!</p>
-        </article>
-        <article>
-            <h2>Quas eum voluptatum exercitationem.</h2>
-            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-            <p>Reprehenderit incidunt distinctio iure quo nihil, esse dolor corporis ullam. Dolore dignissimos sed, ratione inventore facilis eos quis? Unde sunt velit aliquid accusantium magni reiciendis temporibus officiis rem voluptatum nihil?</p>
-        </article>
-        <article>
-            <h2>Assumenda tempora rem expedita?</h2>
-            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-            <p>Quos nisi sed placeat libero sapiente. Repellendus omnis, placeat, velit tempore ratione et error neque minus, unde atque necessitatibus est voluptatem provident sunt vitae eaque? Est temporibus ea exercitationem maxime?</p>
-        </article>
-        <article>
-            <h2>Fugiat tempora a accusantium!</h2>
-            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-            <p>Aliquid excepturi cum laborum voluptatem enim debitis voluptatibus recusandae quisquam, vel possimus minus consectetur id obcaecati optio voluptate quia tenetur consequatur ipsum necessitatibus itaque. Eos et ex illo nulla libero.</p>
-        </article>
-        <article>
-            <h2>Pariatur dolor animi mollitia!</h2>
-            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-            <p>Laboriosam, dolorum? Odio provident ipsa magnam ex expedita earum exercitationem reiciendis, architecto nobis vero molestiae delectus quos voluptate rem blanditiis assumenda. Eius quisquam error eaque quos minus natus, commodi repellendus?</p>
-        </article>
-        <article>
-            <h2>Assumenda ex vel cupiditate?</h2>
-            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-            <p>Illo facere voluptatibus, hic debitis blanditiis aut ratione quam quos obcaecati sapiente perspiciatis placeat est eveniet repellendus recusandae laboriosam minus ab iste maxime eos fugiat labore necessitatibus veniam adipisci. Hic.</p>
-        </article>
+      <article>
+        <h2>Lorem ipsum dolor sit.</h2>
+        <img
+          src="https://vis-society.github.io/labs/2/images/empty.svg"
+          alt=""
+        />
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores
+          excepturi numquam modi aperiam eius magnam! Eaque cupiditate debitis
+          accusamus molestias quas harum cumque, perspiciatis totam vero
+          assumenda ratione suscipit temporibus!
+        </p>
+      </article>
+      <article>
+        <h2>Debitis voluptates ab inventore.</h2>
+        <img
+          src="https://vis-society.github.io/labs/2/images/empty.svg"
+          alt=""
+        />
+        <p>
+          Deserunt, iste fuga? Voluptas assumenda fuga, ratione, magnam
+          molestias quo neque cupiditate repellendus odit ex quisquam impedit
+          error pariatur est atque sint dolore consequatur mollitia quos,
+          sapiente amet? Similique, eligendi.
+        </p>
+      </article>
+      <article>
+        <h2>Illum necessitatibus sint magni.</h2>
+        <img
+          src="https://vis-society.github.io/labs/2/images/empty.svg"
+          alt=""
+        />
+        <p>
+          Inventore aut error beatae dicta, itaque ut repudiandae dignissimos
+          deserunt incidunt perspiciatis earum repellat, maxime eum neque
+          voluptatum velit sapiente ipsam aspernatur iste quia. Commodi minus
+          tempore laborum impedit facere.
+        </p>
+      </article>
+      <article>
+        <h2>Distinctio ea quo iusto?</h2>
+        <img
+          src="https://vis-society.github.io/labs/2/images/empty.svg"
+          alt=""
+        />
+        <p>
+          Ipsam officiis saepe voluptatem qui, harum, unde culpa facilis eius
+          doloribus debitis voluptatibus repudiandae error quis iste perferendis
+          nam nulla nihil tenetur fugit ullam eaque. Debitis quos eveniet
+          recusandae dignissimos?
+        </p>
+      </article>
+      <article>
+        <h2>Mollitia illum rem error.</h2>
+        <img
+          src="https://vis-society.github.io/labs/2/images/empty.svg"
+          alt=""
+        />
+        <p>
+          Laborum quisquam consectetur quaerat quos in ab, est perferendis vitae
+          assumenda natus modi rem dolore a animi illum! Architecto tenetur
+          eveniet eaque sit rem iste, ipsa voluptate unde beatae. Ipsa?
+        </p>
+      </article>
+      <article>
+        <h2>Maiores reiciendis quasi totam?</h2>
+        <img
+          src="https://vis-society.github.io/labs/2/images/empty.svg"
+          alt=""
+        />
+        <p>
+          Impedit illo recusandae sit debitis, laboriosam natus quas aliquid
+          esse officiis harum amet maxime porro ea provident at error itaque
+          excepturi dolorem. Recusandae unde delectus dolorum voluptas ullam
+          quis iste.
+        </p>
+      </article>
+      <article>
+        <h2>Maiores quos blanditiis alias.</h2>
+        <img
+          src="https://vis-society.github.io/labs/2/images/empty.svg"
+          alt=""
+        />
+        <p>
+          Sequi recusandae magni ratione et, veniam distinctio nobis, vitae vel
+          inventore vero libero accusantium, fugit quam quaerat cupiditate
+          facere illo? At harum, magnam est ad vitae numquam possimus
+          repellendus non!
+        </p>
+      </article>
+      <article>
+        <h2>Quas eum voluptatum exercitationem.</h2>
+        <img
+          src="https://vis-society.github.io/labs/2/images/empty.svg"
+          alt=""
+        />
+        <p>
+          Reprehenderit incidunt distinctio iure quo nihil, esse dolor corporis
+          ullam. Dolore dignissimos sed, ratione inventore facilis eos quis?
+          Unde sunt velit aliquid accusantium magni reiciendis temporibus
+          officiis rem voluptatum nihil?
+        </p>
+      </article>
+      <article>
+        <h2>Assumenda tempora rem expedita?</h2>
+        <img
+          src="https://vis-society.github.io/labs/2/images/empty.svg"
+          alt=""
+        />
+        <p>
+          Quos nisi sed placeat libero sapiente. Repellendus omnis, placeat,
+          velit tempore ratione et error neque minus, unde atque necessitatibus
+          est voluptatem provident sunt vitae eaque? Est temporibus ea
+          exercitationem maxime?
+        </p>
+      </article>
+      <article>
+        <h2>Fugiat tempora a accusantium!</h2>
+        <img
+          src="https://vis-society.github.io/labs/2/images/empty.svg"
+          alt=""
+        />
+        <p>
+          Aliquid excepturi cum laborum voluptatem enim debitis voluptatibus
+          recusandae quisquam, vel possimus minus consectetur id obcaecati optio
+          voluptate quia tenetur consequatur ipsum necessitatibus itaque. Eos et
+          ex illo nulla libero.
+        </p>
+      </article>
+      <article>
+        <h2>Pariatur dolor animi mollitia!</h2>
+        <img
+          src="https://vis-society.github.io/labs/2/images/empty.svg"
+          alt=""
+        />
+        <p>
+          Laboriosam, dolorum? Odio provident ipsa magnam ex expedita earum
+          exercitationem reiciendis, architecto nobis vero molestiae delectus
+          quos voluptate rem blanditiis assumenda. Eius quisquam error eaque
+          quos minus natus, commodi repellendus?
+        </p>
+      </article>
+      <article>
+        <h2>Assumenda ex vel cupiditate?</h2>
+        <img
+          src="https://vis-society.github.io/labs/2/images/empty.svg"
+          alt=""
+        />
+        <p>
+          Illo facere voluptatibus, hic debitis blanditiis aut ratione quam quos
+          obcaecati sapiente perspiciatis placeat est eveniet repellendus
+          recusandae laboriosam minus ab iste maxime eos fugiat labore
+          necessitatibus veniam adipisci. Hic.
+        </p>
+      </article>
     </div>
-</body>
+  </body>
 </html>
