--- a/contact/index.html
+++ b/contact/index.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact Page</title>
-    <link rel="stylesheet" href="../styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="../styles.css" />
+  </head>
+  <body>
     <script type="module" src="../global.js"></script>
     <h1>Contact Page</h1>
     <form action="mailto:k1mittal@ucsd.edu" method="GET">
-        <label>
-            Subject: 
-            <input name="subject" required>
-        </label>    
-        <label>
-            Message: 
-            <textarea name="body" rows="5" cols="30" required></textarea>
-        </label>
-        <button>Send</button>
+      <label>
+        Subject:
+        <input name="subject" required />
+      </label>
+      <label>
+        Message:
+        <textarea name="body" rows="5" cols="30" required></textarea>
+      </label>
+      <button>Send</button>
     </form>
-</body>
+  </body>
 </html>
