--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ketan Mittal: Personal Site and Portfolio (DSC 106)</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
     <script type="module" src="global.js"></script>
-    <h1> Ketan Mittal</h1>
-    <p> This is a quick description. This is specifically for the Spring 2025 DSC 106 Class where we will be learning Data Science Visualization. A quick introduction about me is that I am a current sophomore student at UCSD, studying Data Science and double minoring in Mathematics and Cognitive Science. </p>
-    <img src = "images/rice.jpg" alt = "sticky rice" height="200px">
-</body>
-</html> 
+    <h1>Ketan Mittal</h1>
+    <p>
+      This is a quick description. This is specifically for the Spring 2025 DSC
+      106 Class where we will be learning Data Science Visualization. A quick
+      introduction about me is that I am a current sophomore student at UCSD,
+      studying Data Science and double minoring in Mathematics and Cognitive
+      Science.
+    </p>
+    <img src="images/rice.jpg" alt="sticky rice" height="200px" />
+  </body>
+</html>
