lab 04 and proj 02 start

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <script type="module" src="global.js"></script>
+    <script src="global.js" type="module" ></script>
+    <script src="index.js" type="module" defer></script>
     <h1>Ketan Mittal</h1>
     <p>
       This is a quick description. This is specifically for the Spring 2025 DSC
@@ -17,5 +18,12 @@
       Science.
     </p>
     <img src="images/rice.jpg" alt="sticky rice" height="200px" />
+    <h2>Latest Projects</h2>
+    <div class="projects">
+      <!-- Dynamically added content will appear here -->
+    </div>
+
+    <h2>My Github Stats</h2>
+    <div id="profile-stats"></div>
   </body>
 </html>
