--- a/project_02/index.html
+++ b/project_02/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- THE WEBPAGE CAN BE FOUND AT  -->
+    <!-- THE WEBPAGE CAN BE FOUND AT https://k1mittal.github.io/portfolio/project_02/-->
     <title>Project 2 Report</title>
     <style>
       :root {
