added comments everywhere

--- a/project_02/index.html
+++ b/project_02/index.html
@@ -141,7 +141,7 @@
       }
     </style>
   </head>
-
+  <!-- THE WEBPAGE CAN BE FOUND AT https://k1mittal.github.io/portfolio/project_02/-->
   <body>
     <header>
       <h1>
@@ -215,5 +215,6 @@
           </p>
       </section>
     </main>
+    <!-- THE WEBPAGE CAN BE FOUND AT https://k1mittal.github.io/portfolio/project_02/-->
   </body>
 </html>
