--- a/project_02/index.html
+++ b/project_02/index.html
@@ -150,6 +150,7 @@
       </h1>
 
       <p><strong>Ketan Mittal</strong> — <em>k1mittal@ucsd.edu</em></p>
+      <p><small><a href = "https://k1mittal.github.io/portfolio/project_02/">https://k1mittal.github.io/portfolio/project_02/</a></small></p>
     </header>
 
     <main>
