--- a/projects/index.html
+++ b/projects/index.html
@@ -10,7 +10,7 @@
     <script src="../global.js" type="module"></script>
     <script src="projects.js" type="module"></script>
     <h1 class="projects-title">Projects</h1>
-    <div class = "container">
+    <div class="container">
       <svg id="projects-pie-plot" viewBox="-50 -50 100 100"></svg>
       <ul class="legend"></ul>
     </div>
@@ -20,8 +20,6 @@
       aria-label="Search projects"
       placeholder="🔍 Search projects…"
     />
-    <div class="projects">
-
-    </div>
+    <div class="projects"></div>
   </body>
 </html>
