--- a/meta/index.html
+++ b/meta/index.html
@@ -3,11 +3,36 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact Page</title>
+    <title>Meta Page</title>
     <link rel="stylesheet" href="../styles.css" />
   </head>
   <body>
     <script type="module" src="../global.js"></script>
+    <script type="module" src="main.js"></script>
     <h1>Meta Page</h1>
+    <h2>Commits by time of day</h2>
+    <div id="chart"></div>
+    <dl id="commit-tooltip" class="info tooltip" hidden>
+      <dt>Commit</dt>
+      <dd>
+        <a href="" id="commit-link" target="_blank"></a>
+      </dd>
+
+      <dt>Date</dt>
+      <dd id="commit-date"></dd>
+
+      <!-- Add: Time, author, lines edited -->
+      <dt>Time</dt>
+      <dd id="commit-time"></dd>
+
+      <dt>Author</dt>
+      <dd id="commit-author"></dd>
+
+      <dt>Lines Edited</dt>
+      <dd id="commit-lines"></dd>
+    </dl>
+    <p id="selection-count">No commits selected</p>
+    <dl id="language-breakdown" class="stats"></dl>
+    <div id="stats"></div>
   </body>
 </html>
